2009-06-11  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR fortran/38718
	* gfortran.dg/is_iostat_end_eor_2.f90: New test.
	* gfortran.dg/nan_5.f90: New test.

2009-06-10  Nathan Froyd  <froydnj@codesourcery.com>

	* gcc.target/arm/neon-modes-1.c: New test.

2009-06-10  Kai Tietz  <kai.tietz@onevision.com>

	* g++.dg/torture/pr31579.C: Cast pointer
	via __SIZE_TYPE__ instead of 'unsigned long'.

2009-06-10  Anthony Green  <green@moxielogic.com>

	* testsuite/lib/target-supports.exp (check_profiling_available):
	Profiling is not available for testing purposes on moxie.

2009-06-09  Ian Lance Taylor  <iant@google.com>

	* gcc.dg/Wcxx-compat-12.c: New testcase.

2009-06-09  Janne Blomqvist  <jb@gcc.gnu.org>

	PR libfortran/40334
	* gfortran.dg/backspace_11.f90: New.

2009-06-09  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/defaulted10.C: New.

2009-06-09  Martin Jambor  <mjambor@suse.cz>

	* testsuite/gcc.c-torture/compile/pr40351.c: New file.

2009-06-09  Olivier Hainque  <hainque@adacore.com>

	* gnat.dg/align_max.adb: New test.

2009-06-08  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/auto15.C: New.

2009-06-08  Jan Hubicka  <jh@suse.cz>

	PR debug/39834
	* gcc.dg/torture/pr39834.c

2009-06-08  Jan Hubicka  <jh@suse.cz>

	PR middle-end/40102
	* g++.dg/torture/pr40102.C: New testcase.

2009-06-08  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/builtin-object-size-2.c (test1): Adjust expected results.
	* gcc.dg/builtin-object-size-4.c (test1): Adjust expected results.
	* gcc.dg/builtin-object-size-6.c: New test.

	PR c++/40373
	* g++.dg/template/dtor7.C: New test.

	PR c++/40370
	PR c++/40372
	* g++.dg/template/error41.C: New test.
	* g++.dg/template/error42.C: New test.

2009-06-08  Revital Eres  <eres@il.ibm.com>

	PR testsuite/40359
	* gcc.dg/vect/vect-58.c: Change checks to use vect_hw_misalign.
	* gcc.dg/vect/vect-88.c: Likewise.
	* gcc.dg/vect/no-section-anchors-vect-66.c: Likewise.
	* gcc.dg/vect/pr25413.c: Likewise.