@@ -1,8 +1,7 @@
 /* Excess precision tests.  Test that excess precision is carried
    through various operations.  */
 /* { dg-do run } */
-/* { dg-require-effective-target ilp32 } */
-/* { dg-options "-O2 -fexcess-precision=standard" } */
+/* { dg-options "-O2 -mfpmath=387 -fexcess-precision=standard" } */
 
 #include <float.h>
 
